--- a/invest.html
+++ b/invest.html
@@ -55,8 +55,8 @@
           <h1 class="h1--giga">Theatre <br/>for everyone.</h1>
           <h2 class="h2--giga  margin--top-one-space">Own a part of the most exciting theatre tech company in the world.</h2>
           <p class="margin--top-two-spaces">
-            <a href="https://www.youtube.com/watch?v=DgFc0esO-uk" class="link--play-video  js-popup" id="trk-playvideo-link" title="Watch the video">
-              <img src="/images/video-thumbnail.jpg" alt="investor video stagedoor" height="150" />
+            <a href="https://www.youtube.com/watch?v=DgFc0esO-uk" class="link--play-video  js-popup" id="trk-playvideo-link" title="Watch short video">
+              <img src="/images/video-thumbnail.jpg" alt="investor video stagedoor" height="150" /><br/>Watch short video
             </a>
           </p>
         </div>
@@ -67,7 +67,7 @@
 
 
     <section class="text  padding--top-bottom-six-spaces  max-width--980  horizontal--center">
-      <header class="header--purple">
+      <header class="header--green">
         What we’re doing
       </header>
 
@@ -83,7 +83,7 @@
 
     <section class="has-bg-image--gradient  text">
       <div class="padding--top-bottom-six-spaces  max-width--980  horizontal--center">
-        <header class="header--green">
+        <header class="header--orange">
           Meet Stagedoor
         </header>
 
@@ -115,6 +115,18 @@
       </div>
     </section>
 
+
+    <section class="text  padding--top-six-spaces  max-width--980  horizontal--center">
+      <header class="header--purple">
+        Watch the video
+      </header>
+
+      <div class="margin--top-two-spaces">
+        <iframe width="100%" height="550" src="https://www.youtube.com/embed/DgFc0esO-uk?rel=0&amp;showinfo=0" frameborder="
+        0" allowfullscreen></iframe>
+        <p><a href="https://www.youtube.com/DgFc0esO-uk" target="_blank" rel="nofollow" class="no-link-colour  float--right  text--grey">Watch on YouTube (5:59)</a></p>
+      </div>
+    </section>
 
     <section class="text  padding--top-bottom-six-spaces  max-width--980  horizontal--center">
       <header class="header--red">
