--- a/invest.html
+++ b/invest.html
@@ -225,7 +225,7 @@
       <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
     </section>
     <section class="max-width--980  horizontal--center  text--light-grey">
-      This is not an invitation to invest. Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and it should be done only as part of a diversified portfolio. This webpage has been approved as a financial promotion by Seedrs Limited which is authorised and regulated by the Financial Conduct Authority.
+      This is not an invitation to invest. Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and it should be done only as part of a diversified portfolio.
     </section>
   </div>
 
