--- a/access.html
+++ b/access.html
@@ -36,7 +36,7 @@
   <script>
   function loadDaFun() {
      var script = document.createElement('script');
-     script.src = 'http://192.168.1.227:2000/scripts/partials/access-redirect.min.js';
+     script.src = 'https://stagedoorapp.com/scripts/partials/access-redirect.min.js';
      var head = document.getElementsByTagName("head")[0];
      head.appendChild(script);
   }
