--- a/invest.html
+++ b/invest.html
@@ -13,7 +13,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="description" content="Invest in Stagedoor. Own a part of the most exciting theatre tech company in the world." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="apple-itunes-app" content="app-id=963068912">
+  <!--meta name="apple-itunes-app" content="app-id=963068912"-->
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
@@ -54,7 +54,7 @@
         <div class="max-width--650  margin--top-three-spaces">
           <h1 class="h1--giga">Theatre <br/>for everyone.</h1>
           <h2 class="h2--giga  margin--top-one-space">Own a part of the most exciting theatre tech company in the world.</h2>
-          <p class="margin--top-two-spaces">
+          <p class="margin--top-two-spaces  inverstor-video--link">
             <a href="https://www.youtube.com/watch?v=DgFc0esO-uk" class="link--play-video  js-popup" id="trk-playvideo-link" title="Watch short video">
               <img src="/images/video-thumbnail.jpg" alt="investor video stagedoor" height="150" /><br/>Watch short video
             </a>
@@ -121,8 +121,8 @@
         Watch the video
       </header>
 
-      <div class="margin--top-two-spaces">
-        <iframe width="100%" height="550" src="https://www.youtube.com/embed/DgFc0esO-uk?rel=0&amp;showinfo=0" frameborder="
+      <div class="margin--top-two-spaces  inverstor-video--iframe">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DgFc0esO-uk?rel=0&amp;showinfo=0" frameborder="
         0" allowfullscreen></iframe>
         <p><a href="https://www.youtube.com/DgFc0esO-uk" target="_blank" rel="nofollow" class="no-link-colour  float--right  text--grey">Watch on YouTube (5:59)</a></p>
       </div>
