--- a/invest.html
+++ b/invest.html
@@ -122,8 +122,7 @@
       </header>
 
       <div class="margin--top-two-spaces  investor-video--iframe">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DgFc0esO-uk?rel=0&amp;showinfo=0" frameborder="
-        0" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DgFc0esO-uk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen id="trk-playvideo-link"></iframe>
         <p><a href="https://www.youtube.com/DgFc0esO-uk" target="_blank" rel="nofollow" class="no-link-colour  float--right  text--grey">Watch on YouTube (5:59)</a></p>
       </div>
     </section>
