--- a/invest.html
+++ b/invest.html
@@ -116,12 +116,12 @@
     </section>
 
 
-    <section class="text  padding--top-six-spaces  max-width--980  horizontal--center">
+    <section class="text  padding--top-six-spaces  max-width--980  horizontal--center" id="trk-videoiframe-link">
       <header class="header--purple">
         Watch the video
       </header>
 
-      <div class="margin--top-two-spaces  investor-video--iframe" id="trk-videoiframe-link">
+      <div class="margin--top-two-spaces  investor-video--iframe">
         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DgFc0esO-uk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         <p><a href="https://www.youtube.com/DgFc0esO-uk" target="_blank" rel="nofollow" class="no-link-colour  float--right  text--grey">Watch on YouTube (5:59)</a></p>
       </div>
