--- a/invest.html
+++ b/invest.html
@@ -76,7 +76,7 @@
         <h2 class="padding--top-two-spaces">Stagedoor essentially <span class="text--emphasis">levels the playing field</span> between small and big budget productions. By giving a voice to the community, we believe that theatre goers can discover the best shows for them.</h2>
         <h2 class="padding--top-two-spaces">We are building a new way for theatre lovers to discover, book, and experience theatre. And <span class="text--emphasis">we want you</span> to be part of it.</h2>
         <h2 class="padding--top-two-spaces">Pre-register your interest for a chance to join our journey.</h2>
-        <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
+        <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces" id="trk-preregister-link">Pre-register now</a></h2>
       </div>
     </section>
 
@@ -116,7 +116,7 @@
     </section>
 
 
-    <section class="text  padding--top-six-spaces  max-width--980  horizontal--center" id="trk-videoiframe-link">
+    <section class="text  padding--top-six-spaces  max-width--980  horizontal--center">
       <header class="header--purple">
         Watch the video
       </header>
@@ -221,7 +221,7 @@
       <h2 class="padding--top-two-spaces">Our early stage investors and board members include tech entrepreneurs and theatre professionals. Being a very community-focused product, we wanted to open-up this funding round to our community and theatre lovers around the globe.</h2>
       <h2 class="padding--top-two-spaces  h2--giga">If you’d like to learn more and be part of the journey, pre-register your interest below.</h2>
       <p class="text--bigger">* Selection will be made on a first-come, first-served basis.</p>
-      <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
+      <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces" id="trk-preregister-link">Pre-register now</a></h2>
     </section>
     <section class="max-width--980  horizontal--center  text--light-grey">
       This is not an invitation to invest. Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and it should be done only as part of a diversified portfolio.
