--- a/first-access.html
+++ b/first-access.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -88,7 +88,7 @@
         <h2 class="padding--top-two-spaces">Stagedoor essentially <span class="text--emphasis">levels the playing field</span> between small and big budget productions. By giving a voice to the community, we believe that theatre goers can discover the best shows for them.</h2>
         <h2 class="padding--top-two-spaces">We are building a new way for theatre lovers to discover, book, and experience theatre. And <span class="text--emphasis">we want you</span> to be part of it.</h2>
         <h2 class="padding--top-two-spaces">Pre-register your interest for a chance to join our journey.</h2>
-        <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" target="_blank" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
+        <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" target="_blank" class="button  button--download  margin--top-two-spaces" id="trk-preregister-link">Pre-register now</a></h2>
       </div>
     </section>
 
@@ -134,8 +134,7 @@
       </header>
 
       <div class="margin--top-two-spaces  investor-video--iframe">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DgFc0esO-uk?rel=0&amp;showinfo=0" frameborder="
-        0" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DgFc0esO-uk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen id="trk-playvideo-link"></iframe>
         <p><a href="https://www.youtube.com/DgFc0esO-uk" target="_blank" rel="nofollow" class="no-link-colour  float--right  text--grey">Watch on YouTube (5:59)</a></p>
       </div>
     </section>
@@ -234,7 +233,7 @@
       <h2 class="padding--top-two-spaces">Our early stage investors and board members include tech entrepreneurs and theatre professionals. Being a very community-focused product, we wanted to open-up this funding round to our community and theatre lovers around the globe.</h2>
       <h2 class="padding--top-two-spaces  h2--giga">If you’d like to learn more and be part of the journey, pre-register your interest below.</h2>
       <p class="text--bigger">* Selection will be made on a first-come, first-served basis.</p>
-      <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" target="_blank" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
+      <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" target="_blank" class="button  button--download  margin--top-two-spaces" id="trk-preregister-link">Pre-register now</a></h2>
     </section>
     <section class="max-width--980  horizontal--center  text--light-grey">
       This is not an invitation to invest. Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and it should be done only as part of a diversified portfolio.
