prepping for submission

--- a/access.html
+++ b/access.html
@@ -30,7 +30,7 @@
   <meta name="twitter:description" content="Access denied. Enter the code you received to access this page.">
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
-<body onload="showAlert();" style="background-image: url('http://stagedoorapp.com/images/masthead.jpg');background-position: 50% 50%;">
+<body onload="showAlert();" style="background-image: url('https://stagedoorapp.com/images/masthead.jpg');background-position: 50% 50%;">
   <!-- Google Tag Manager -->
   <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
