--- a/first-access.html
+++ b/first-access.html
@@ -248,7 +248,7 @@
     </span>
 
     <div>
-      <a href="https://stageodorapp.com" title="London Theatre app for iOS" class="no-link-colour">Stagedoor</a> is a <strong>London theatre app</strong>.
+      Stagedoor is a <a href="https://stageodorapp.com" title="London Theatre app for iOS" class="no-link-colour"><strong>London theatre app</strong></a>.
     </div>
   </footer>
 
