--- a/first-access.html
+++ b/first-access.html
@@ -265,7 +265,7 @@
     });
 
     // find number of % completed
-    var startDate = new Date(2017, 9, 15);
+    var startDate = new Date(2017, 9, 18);
     var number = Math.ceil((new Date() - startDate)/60000 - 1000)/420;
 
     // animate progress bar
@@ -281,7 +281,7 @@
     setTimeout(function() {
       $('.progress-bar__number').each(function () {
         $(this).prop('Counter',0).animate({
-          Counter: number
+          Counter: widthAnimated
         }, {
           duration: 3000,
           easing: 'swing',
