redirect to seedrs.com/stagedoor

--- a/first-access.html
+++ b/first-access.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Invest in Stagedoor</title>
+  <meta http-equiv="refresh" content="0; URL=https://seedrs.com/stagedoor">
+
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
@@ -41,8 +43,8 @@
   '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-MQWRJJ');</script>
   <!-- End Google Tag Manager -->
-
-  <div class="top-bar">
+  Redirecting… please wait.
+  <!--div class="top-bar">
     <div class="top-bar__content  text--center">
       <h3><b>Pre-registrations are now open. <a href="https://stagedoor1.typeform.com/to/hSAEsj" target="_blank" id="trk-preregister-link">Pre-register your interest now</a>.</b></h3>
       <a href="https://stagedoor1.typeform.com/to/hSAEsj" target="_blank" class="progress-bar  no-link-colour" data-percent="0">
@@ -255,7 +257,7 @@
 
 
   <!-- JS scripts -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="/scripts/partials/skrollr.min.js"></script>
   <script src="/scripts/partials/popup.min.js"></script>
   <script>
@@ -359,6 +361,6 @@
       fadeScrollText();
     });
     fadeScrollText();
-  </script>
+  </script-->
 </body>
 </html>
