--- a/access.html
+++ b/access.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Access code required - Stagedoor</title>
+  <meta http-equiv="refresh" content="0; URL=https://seedrs.com/stagedoor">
+
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
@@ -30,7 +32,8 @@
   <meta name="twitter:description" content="Access denied. Enter the code you received to access this page.">
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
-<body onload="showAlert();" style="background-image: url('https://stagedoorapp.com/images/masthead.jpg');background-position: 50% 50%;">
+<!-- <body onload="showAlert();" style="background-image: url('https://stagedoorapp.com/images/masthead.jpg');background-position: 50% 50%;"> -->
+<body>
   <!-- Google Tag Manager -->
   <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -39,8 +42,10 @@
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-MQWRJJ');</script>
+  Redirecting… please wait.
+
   <!-- End Google Tag Manager -->
-  <h1 id="response" class="text--center  padding--top-two-spaces"></h1>
+  <!--h1 id="response" class="text--center  padding--top-two-spaces"></h1>
 
   <script>
   function showAlert() {
@@ -49,6 +54,6 @@
      var head = document.getElementsByTagName("head")[0];
      head.appendChild(script);
   }
-  </script>
+  </script-->
 </body>
 </html>
