notify visitors that crowdfunding is now open

--- a/access.html
+++ b/access.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Access code required - Stagedoor</title>
-  <meta http-equiv="refresh" content="0; URL=https://seedrs.com/stagedoor">
+  <meta http-equiv="refresh" content="0; URL=http://192.168.1.227:2000/intermediate">
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
