--- a/invest.html
+++ b/invest.html
@@ -32,6 +32,7 @@
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
 <body>
+  <div class="popup--invest"></div>
   <!-- Google Tag Manager -->
   <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -74,9 +75,9 @@
       <div class="margin--top-four-spaces">
         <h2 class="h2--giga">We believe that theatre <em>is for everyone</em>, and by making it more accessible, we can bring more people close to it.</h2>
         <h2 class="padding--top-two-spaces">Stagedoor essentially <span class="text--emphasis">levels the playing field</span> between small and big budget productions. By giving a voice to the community, we believe that theatre goers can discover the best shows for them.</h2>
-        <h2 class="padding--top-two-spaces">We are building a new way for theatre lovers to discover, book, and experience theatre. And <span class="text--emphasis">we want you</span> to be part of it.</h2>
-        <h2 class="padding--top-two-spaces">Pre-register your interest for a chance to join our journey.</h2>
-        <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces" id="trk-preregister-link">Pre-register now</a></h2>
+        <h2 class="padding--top-two-spaces">We are building a new way for theatre lovers to discover, book, and experience theatre. And <span class="text--emphasis">we want you</span> to be part of it. Join in on our journey below:</h2>
+        <h2><a href="https://www.seedrs.com/stagedoor/" class="button  button--funding  margin--top-two-spaces" id="trk-preregister-link" rel="nofollow">Visit crowdfunding page</a></h2>
+        <p>*Update: 75% funded in 24hrs so far.</p>
       </div>
     </section>
 
@@ -219,9 +220,9 @@
       <h2 class="h2--giga">Stagedoor funding.</h2>
       <h2 class="padding--top-two-spaces">For our second funding round we are raising £300,000 from Angel investors and strategic theatre industry partners. Our goal is to grow our user base to 100,000 in London, execute on our monetisation strategy, and prepare for geographical expansion in NYC. Stagedoor has also been approved for an EU Innovation grant of €135,000.</h2>
       <h2 class="padding--top-two-spaces">Our early stage investors and board members include tech entrepreneurs and theatre professionals. Being a very community-focused product, we wanted to open-up this funding round to our community and theatre lovers around the globe.</h2>
-      <h2 class="padding--top-two-spaces  h2--giga">If you’d like to learn more and be part of the journey, pre-register your interest below.</h2>
-      <p class="text--bigger">* Selection will be made on a first-come, first-served basis.</p>
-      <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces" id="trk-preregister-link">Pre-register now</a></h2>
+      <h2 class="padding--top-two-spaces  h2--giga">To join in on our journey, visit our crowdfunding page below:</h2>
+      <h2><a href="https://www.seedrs.com/stagedoor/" class="button  button--funding  margin--top-two-spaces" id="trk-preregister-link" rel="nofollow">Visit crowdfunding page</a></h2>
+      <p>* Update: 75% funded in 24hrs so far.</p>
     </section>
     <section class="max-width--980  horizontal--center  text--light-grey">
       This is not an invitation to invest. Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and it should be done only as part of a diversified portfolio.
@@ -239,8 +240,6 @@
         Stagedoor is a <a href="https://stageodorapp.com" title="London Theatre app for iOS" class="no-link-colour"><strong>London theatre app</strong></a>.
     </div>
   </footer>
-
-
 
   <!-- JS scripts -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -312,5 +311,7 @@
     });
     fadeScrollText();
   </script>
+
+  <script src="/scripts/partials/noty.min.js"></script><script>setTimeout(function(){new Noty({text: '<div class="text--center"><p class="text--bigger">Crowdfunding now open.<br/><small>Don’t miss out!</small><a href="https://seedrs.com/stagedoor" class="button  button--white  margin--top-half-space">Own part of Stagedoor</a></p><small class="opacity--50 padding--top-half-space">* Update: 74% funded in 24hrs</small></div>',layout: 'bottomRight',type: 'error',theme: 'metroui',closeWith: ['button']}).show();}, 2500);</script>
 </body>
 </html>
