--- a/index.html
+++ b/index.html
@@ -116,6 +116,19 @@
       ]
     }
   </script>
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1954324361508081');
+    fbq('track', 'PageView');
+  </script>
 </head>
 <body>
   <!-- Google Tag Manager -->
@@ -255,6 +268,6 @@
   </script>
   <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script-->
   <!--script src="scripts/app.min.js"></script-->
-  <script src="/scripts/partials/noty.min.js"></script><script>setTimeout(function(){new Noty({text: '<div class="text--center"><p class="text--bigger">Crowdfunding now open.<br/><small>Don’t miss out!</small><a href="https://seedrs.com/stagedoor" class="button  button--white  margin--top-half-space">Own part of Stagedoor</a></p><small class="opacity--50 padding--top-half-space">* Update: 74% funded in 24hrs</small></div>',layout: 'bottomRight',type: 'error',theme: 'metroui',closeWith: ['button']}).show();}, 2500);</script>
+  <!--script src="/scripts/partials/noty.min.js"></script><script>setTimeout(function(){new Noty({text: '<div class="text--center"><p class="text--bigger">Crowdfunding now open.<br/><small>Don’t miss out!</small><a href="https://seedrs.com/stagedoor" class="button  button--white  margin--top-half-space">Own part of Stagedoor</a></p><small class="opacity--50 padding--top-half-space">* Update: 74% funded in 24hrs</small></div>',layout: 'bottomRight',type: 'error',theme: 'metroui',closeWith: ['button']}).show();}, 2500);</script-->
 </body>
 </html>
