VAULT Festival update webpage

--- a/partners.html
+++ b/partners.html
@@ -47,7 +47,8 @@
       <a href="http://stagedoorapp.com/partners" title="Become a partner" class="current">Claim your page</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
       <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
-      <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a>
+      <!-- <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a> -->
+      <a href="http://stagedoorapp.com/vaultfestival" title="VAULT Festival" class="hide-on-mobile  vault-festival-colour">#VAULTFestival</a>
     </nav>
 
     <section class="show-on-mobile">
@@ -179,8 +180,5 @@
       document.getElementById('appstore-link').href="itms://itunes.apple.com/gb/app/stagedoor-london-theatre-app/id963068912"
     }
   </script>
-  <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script-->
-  <!--script src="scripts/app.min.js"></script-->
-  <script src="/scripts/partials/noty.min.js"></script><script>setTimeout(function(){new Noty({text: '<div class="text--center"><p class="text--bigger">Crowdfunding now open.<br/><small>Don’t miss out!</small><a href="https://seedrs.com/stagedoor" class="button  button--white  margin--top-half-space">Own part of Stagedoor</a></p><small class="opacity--50 padding--top-half-space">* Update: 74% funded in 24hrs</small></div>',layout: 'bottomRight',type: 'error',theme: 'metroui',closeWith: ['button']}).show();}, 2500);</script>
 </body>
 </html>
