--- a/vaultfestival.html
+++ b/vaultfestival.html
@@ -2,7 +2,7 @@
 <html lang="en-gb">
 
 <head>
-  <title>VAULT Festival 2017 official mobile app</title>
+  <title>VAULT Festival 2018</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
@@ -10,14 +10,14 @@
   <link rel="canonical" href="http://stagedoorapp.com/vaultfestival" />
 
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="description" content="VAULT Festival partnered with app to become their official mobile presence app 2017. Book, heart, and share VAULT Festival shows from Stagedoor app." />
+  <meta name="description" content="VAULT Festival 2018 shows. Book, save, and share VAULT Festival shows from Stagedoor app." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
-  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/vaultfestival-stagedoor.png" />
-  <meta property="og:title" content="VAULT Festival 2017 official mobile app" />
-  <meta property="og:description" content="VAULT Festival partnered with Stagedoor to become their official mobile app for 2017. Book, heart, and share VAULT Festival shows from Stagedoor app." />
+  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/vault-festival-2018-stagedoor.png" />
+  <meta property="og:title" content="VAULT Festival 2018" />
+  <meta property="og:description" content="VAULT Festival 2018 shows. Book, save, and share VAULT Festival shows from Stagedoor app." />
   <meta property="og:url" content="http://stagedoorapp.com/vaultfestival" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -27,9 +27,9 @@
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/vaultfestival" />
-  <meta name="twitter:title" content="VAULT Festival 2017 official mobile app" />
-  <meta name="twitter:description" content="VAULT Festival partnered with Stagedoor to become their official mobile app for 2017. Book, heart, and share VAULT Festival shows from Stagedoor app." />
-  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/vaultfestival-stagedoor.png" />
+  <meta name="twitter:title" content="VAULT Festival 2018" />
+  <meta name="twitter:description" content="VAULT Festival 2018 shows. Book, save, and share VAULT Festival shows from Stagedoor app." />
+  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/vault-festival-2018-stagedoor.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
@@ -49,7 +49,7 @@
       <a href="http://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
       <a href="http://bit.ly/vltstgdr" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
-      <a href="http://stagedoorapp.com/vaultfestival" title="Official app of VAULT festival" class="hide-on-mobile  vault-festival-colour">#VAULTFestival</a>
+      <a href="http://stagedoorapp.com/vaultfestival" title="VAULT festival" class="hide-on-mobile  vault-festival-colour">#VAULTFestival</a>
     </nav>
 
     <section class="show-on-mobile">
@@ -57,7 +57,6 @@
         <a href="http://stagedoorapp.com"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  vertical-align--neg-15" /></a>
         <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
         Stagedoor<br/>
-          <small>Official app of VAULT Festival.</small>
         </h2>
       </header>
     </section>
@@ -65,21 +64,20 @@
     <section class="cf">
       <div class="float--right  width--40">
         <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
-          <img src="images/theatre/iphone/vaultfestival.jpg" alt="camden fringe app stagedoor official" class="iphone-screenshot__inside" />
+          <img src="images/theatre/iphone/vaultfestival2018.jpg" alt="vault festival app stagedoor london theatre" class="iphone-screenshot__inside" />
           <img src="images/iphone.png" alt="iphone placeholder" />
         </span>
       </div>
 
       <div class="float--left  width--60  margin--top-four-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <a href="http://bit.ly/vltstgdr" class="block--inline"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--neg-70" /></a>
+          <a href="http://bit.ly/vltstgdr" class="block--inline"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--middle" /></a>
           <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
             Stagedoor<br/>
-            <small>Official app of <a href="http://vaultfestival.com" class="no-link-colour  vault-festival-colour">VAULT Festival</a>.</small>
           </h2>
         </header>
 
-        <h1 class="padding--top-bottom-one-space">The must-have app for VAULT Festival 2017.</h1>
+        <h1 class="padding--top-bottom-one-space">The must-have app for VAULT Festival 2018.</h1>
         <h2>Stay up to date with what’s on, where it&lsquo;s on and who’s in it. &hearts; your favourite <a href="http://vaultfestival.com" class="no-link-colour  vault-festival-colour">VAULT Festival</a> shows.</h2>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="http://bit.ly/vltstgdr" class="appstore-link  button  button--download  vault-festival-colour" title="Get Stagedoor app">Get the Stagedoor app</a>
@@ -93,7 +91,7 @@
       <div class="columns--3">
         <div>
           <h2>Discover the best shows</h2>
-          <p class="text--bigger">Find out which are the most popular shows, ranked by other attendees of VAULT Festival 2017.</p>
+          <p class="text--bigger">Find out which are the most popular shows, ranked by other attendees of VAULT Festival 2018.</p>
         </div>
         <div>
           <h2>Plan your visit</h2>
@@ -118,7 +116,7 @@
     <footer class="padding--top-two-spaces  padding--bottom-one-space  horizontal--center  text--center">
       <button id="toggle-button">Spread the word and share this!</button>
       <div class="sharing-container  padding--top-half-space">
-        <p>Post <a href="images/theatre/vaultfestival-stagedoor.png" target="_blank">this image</a> on social networks and send to friends.</p>
+        <p>Post <a href="images/theatre/vault-festival-2018-stagedoor.png" target="_blank">this image</a> on social networks and send to friends.</p>
         <p>Or, copy this URL: <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/vaultfestival" />
         <small class="text--grey">When pasting the URL, the above image will be attached automatically.</small>
         </p><br/>
