--- a/vaultfestival.html
+++ b/vaultfestival.html
@@ -95,7 +95,7 @@
         </div>
         <div>
           <h2>Plan your visit</h2>
-          <p class="text--bigger">Over the course of six weeks, find out which shows are playing when and plan accordingly.</p>
+          <p class="text--bigger">Over the course of eight weeks, find out which shows are playing when and plan accordingly.</p>
         </div>
         <div>
           <h2>Stay up-to-date</h2>
