--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -237,7 +237,11 @@
       </span>
 
       <div>
-        Stagedoor is a <a href="https://stageodorapp.com" title="London Theatre app for iOS" class="no-link-colour"><strong>London theatre app</strong></a>.
+        Stagedoor is a <a href="https://stagedoorapp.com" title="London Theatre app" class="no-link-colour"><strong>London theatre app</strong></a>.
+      </div>
+      <div class="padding--top-two-spaces  width--40  horizontal--center">
+        <img src="images/funding.png" alt="cy funding logos" />
+        <small class="text--grey">The project is co-funded by the ERDF as part of the Funding Scheme for Entrepreneurial Innovation of the Cyprus Ministry of Energy, Industry, Commerce and Tourism (File No. 8.1.12.13.3.3.75).</small>
       </div>
     </footer>
   </div>
