funding logos in footer

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         Stagedoor is a <a href="https://stagedoorapp.com" title="London Theatre app" class="no-link-colour"><strong>London theatre app</strong></a>.
       </div>
       <div class="padding--top-two-spaces  width--40  horizontal--center">
-        <img src="images/funding.png" alt="cy funding logos" />
+        <img src="images/funding-logos.png" alt="funding logos" />
         <small class="text--grey">The project is co-funded by the ERDF as part of the Funding Scheme for Entrepreneurial Innovation of the Cyprus Ministry of Energy, Industry, Commerce and Tourism (File No. 8.1.12.13.3.3.75).</small>
       </div>
     </footer>
